--- a/FIRSTPAGE.html
+++ b/FIRSTPAGE.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>Script Demo</title>
-    <script src="ageCalculator.js"></script>
+    <script src="ifelse.js"></script>
 </head>
 
 <body>
