--- a/FIRSTPAGE.html
+++ b/FIRSTPAGE.html
@@ -3,12 +3,12 @@
 <!-- head -->
 
 <head>
-    <title>Script Demo</title>
-    <script src="ifelse.js"></script>
+    <title>Guess Game</title>
+    <script src="guessgame.js"></script>
 </head>
 
 <body>
-    <h1>Age Calculator</h1>
+    <h1>Guess!</h1>
 
 </body>
 
