--- a/FIRSTPAGE.html
+++ b/FIRSTPAGE.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>number</title>
-    <script src="numberCount.js"></script>
+    <script src="isEven.js"></script>
 </head>
 
 <body>
