--- a/FIRSTPAGE.html
+++ b/FIRSTPAGE.html
@@ -7,9 +7,9 @@
     <script src="isEven.js"></script>
 </head>
 
-<body>
-    <h1>ya</h1>
-
-</body>
+<div style="border:2px black solid;padding:15px;">
+    <div style="background-color:black; text-align:center; font-size:1cm; color:#ffffff;border:2px;solid;padding:10px;">
+        yaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+</div>
 
 </html>
