--- a/FIRSTPAGE.html
+++ b/FIRSTPAGE.html
@@ -4,12 +4,13 @@
 
 <head>
     <title>number</title>
-    <script src="isEven.js"></script>
+    <script src="disappearnum.js"></script>
 </head>
 
 <div style="border:2px black solid;padding:15px;">
-    <div style="background-color:black; text-align:center; font-size:1cm; color:#ffffff;border:2px;solid;padding:10px;">
-        yaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+    <div
+        style="background-color:black; text-align:center; font-size:30px; color:#ffffff;border:2px;padding:10px; font-family: 微軟正黑體;">
+        嗨嗨你好 (*´▽`*)</div>
 </div>
 
 </html>
